--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html SYSTEM "http://www.thymeleaf.org/dtd/xhtml1-strict-thymeleaf-4.dtd">
 
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="http://www.thymeleaf.org">
+      xmlns:th="http://www.thymeleaf.org"
+      lang="en">
 
 <head>
     <meta charset="utf-8">
@@ -16,8 +17,12 @@
     <script src="/webjars/bootstrap/dist/js/bootstrap.js"></script>
 </head>
 <body>
-Hello!
-<a href="/idea">Ideas</a>
-<a href="/story">Stories</a>
+
+<div class="container-fluid">
+    Hello!
+    <a href="/idea">Ideas</a>
+    <a href="/story">Stories</a>
+</div>
+
 </body>
 </html>
