--- a/src/main/resources/templates/idea.html
+++ b/src/main/resources/templates/idea.html
@@ -32,7 +32,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/">Cosidea</a>
+            <a class="navbar-brand" href="/">cosMind</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
