--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -31,7 +31,7 @@
         </div>
     </div>
 
-    <a href="/idea">Ideas</a>
+    <a id="ideas-link" href="/idea">Ideas</a>
     <a href="/story">Stories</a>
 </div>
 
