--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -39,9 +39,9 @@ Login form adapted from: https://bootsnipp.com/snippets/featured/google-style-lo
                                 Invalid username or password.
                             </div>
 
-                            <input type="text" name="username" class="form-control" placeholder="Username" required autofocus>
-                            <input type="password" name="password" class="form-control" placeholder="Password" required>
-                            <input type="submit" class="btn btn-lg btn-default btn-block" value="Sign In" />
+                            <input id="username" type="text" name="username" class="form-control" placeholder="Username" required autofocus/>
+                            <input id="password" type="password" name="password" class="form-control" placeholder="Password" required/>
+                            <input id="login-button" type="submit" class="btn btn-lg btn-default btn-block" value="Sign In" />
                         </form>
                     </div>
                 </div>
