Don't use deprecated Thymeleaf tag.

--- a/src/main/resources/templates/ideas.html
+++ b/src/main/resources/templates/ideas.html
@@ -39,7 +39,7 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
                 <li class="active"><a href="/idea">Ideas <span class="sr-only">(current)</span></a></li>
-                <li class="active"><div th:substituteby="index::logout"></div></li>
+                <li class="active"><div th:replace="index::logout"></div></li>
             </ul>
         </div><!-- /.navbar-collapse -->
     </nav>
